--- a/src/main/resources/templates/auth/registration.html
+++ b/src/main/resources/templates/auth/registration.html
@@ -11,6 +11,11 @@
     <div style="color: red" th:if="${#fields.hasErrors('name')}"
          th:errors="*{name}">Username Error</div>
     <br/>
+    <label for="surname">Введите фамилию пользователя</label>
+    <input type="text" th:field="*{name}" id="surname">
+    <div style="color: red" th:if="${#fields.hasErrors('name')}"
+         th:errors="*{surname}">User surname Error</div>
+    <br/>
     <label for="age">Введите возраст</label>
     <input type="text" th:field="*{age}" id="age">
     <div style="color: red" th:if="${#fields.hasErrors('age')}"
