--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -13,6 +13,7 @@
             <th scope="col">Имя</th>
             <th scope="col">Фамилия</th>
             <th scope="col">Возраст</th>
+            <th scope="col">Actions</th>
         </tr>
         </thead>
         <tbody>
@@ -22,6 +23,15 @@
             <td th:text="${user.getName()}">
             <td th:text="${user.getSurname()}">
             <td th:text="${user.getAge()}">
+            <td>
+                <!-- Форма для удаления пользователя -->
+                <form method="post" th:action="@{/admin/delete/{userId}(userId=${user.id})}">
+                    <button type="submit">Delete</button>
+                </form>
+                <!-- Ссылка для обновления пользователя -->
+            <form method="post" th:action="@{/admin/edit/{userId}(userId=${user.id})}">
+                <button type="submit">Edit</button>
+            </form>
             </td>
         </tr>
         </tbody>
