--- a/src/main/resources/templates/auth/registration.html
+++ b/src/main/resources/templates/auth/registration.html
@@ -13,7 +13,7 @@
     <br/>
     <label for="surname">Введите фамилию пользователя</label>
     <input type="text" th:field="*{name}" id="surname">
-    <div style="color: red" th:if="${#fields.hasErrors('name')}"
+    <div style="color: red" th:if="${#fields.hasErrors('surname')}"
          th:errors="*{surname}">User surname Error</div>
     <br/>
     <label for="age">Введите возраст</label>
