--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -5,16 +5,17 @@
     <title>Login page</title>
 </head>
 <body>
-<form name = "f" method="post" action="/process_login">
+<h1>Login page</h1>
+<form name="f" method="post" action="/process_login">
     <label for="username">Введите имя пользователя</label>
     <input type="text" name="username" id="username"/>
     <br/>
     <label for="password">Введите пароль</label>
-    <input type="text" name="password" id="password"/>
+    <input type="password" name="password" id="password"/>
     <br/>
-    <input type="submit" value="login"/>
-    <div th:if="${param.error}" style="color: red">
-    </div>
+    <input type="submit" value="Login"/>
+    <br/>
 </form>
+<p>Еще не зарегистрированы? <a href="/auth/registration">Зарегистрируйтесь</a></p>
 </body>
 </html>
